infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: allaeeb
  labels:
    name: allaeeb
    environment: production
